--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="col-12 col-sm-10  col-lg-8">
                             <div class="w-100 mt-0" style=" border-top: 2px solid white;"></div>
                             <p class="mb-1 border-light">Bạn đã chuẩn bị sẳn sàng cho</p>
-                            <h2><b>NHỮNG THỬ THÁCH</b></h2>
+                            <h2 class="text-light"><b>NHỮNG THỬ THÁCH</b></h2>
                         </div>
                         <div class="d-none d-sm-block col img-right">
                             <img src="./img/Chipi2.png" alt="">
