--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
     <!-- css -->
     <link rel="stylesheet" href="./css/main.css">
     <script src="js/coutdown.js"></script>
@@ -68,8 +69,12 @@
                 <div class="col-12 col-md-5 ps-0 menuLeft overflow-hidden">
                     <div class="animate__animated animate__fadeInLeft">
                         <h1>Hi TSV!</h1>
-                        <p class="text-bold">Chào mừng tất cả tân sinh viên trên địa bàn TP HCM<br />
-                            Cùng Khoa Mạng Máy Tính và Truyền Thông - UIT tham gia ngay cuộc thi!!!</p>
+                        <p class="text-bold">Chào mừng tất cả các bạn Tân sinh viên Khoá 2021 đến với Trường Đại học
+                            Công Nghệ Thông Tin - ĐHQG TP.HCM
+                            <br />
+                            Hãy nhanh tay đăng ký tham gia cuộc thi đầy kỳ thú của Khoa Mạng máy tính và Truyền thông
+                            dành riêng cho các bạn nhé!
+                        </p>
                         <a href="https://suctremmt.com/hitsv2021" class="buttonOutilinePrimary">
                             <div class="">
                                 <span class="span-hover"></span>
