--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
                     <div class="container">
                         <div class="row text-center py-3">
                             <div class="col text-light my-auto">
-                                <b class="" style="font-size: 2.5rem;" id="day">00</b>
+                                <b class="counter" style="font-size: 2.5rem;" id="day">00</b>
                                 <p>DAYS</p>
                             </div>
                             <div class="col-1 font-weight-bolder text-light my-auto" style="font-size: 2rem">:</div>
                             <div class="col text-light my-auto">
-                                <b class="" style="font-size: 2.5rem; " id="hour">00</b>
+                                <b class="counter" style="font-size: 2.5rem; " id="hour">00</b>
                                 <p>HOURS</p>
                             </div>
                             <div class="col-1 font-weight-bolder text-light my-auto" style="font-size: 2rem">:</div>
                             <div class="col  text-light my-auto">
-                                <b class="" style="font-size: 2.5rem; " id="minu">00</b>
+                                <b class="counter" style="font-size: 2.5rem; " id="minu">00</b>
                                 <p>MINUTES</p>
                             </div>
                             <div class="d-none d-sm-block col-1 font-weight-bolder text-light my-auto"
                                 style="font-size: 2rem">:</div>
                             <div class="col  text-light my-auto">
-                                <b class="" style="font-size: 2.5rem; " id="seco">00</b>
+                                <b class="counter" style="font-size: 2.5rem; " id="seco">00</b>
                                 <p>SECONDS</p>
                             </div>
                         </div>
@@ -259,15 +259,15 @@
                 <div class="col-12 col-md-8 container bg-light rounded shadow-lg py-4">
                     <div class="row">
                         <div class="col">
-                            <h2 class="text-primary" id="sinhvien">00</h2>
+                            <h2 class="text-primary counter" id="sinhvien">00</h2>
                             <p>Sinh viên</p>
                         </div>
                         <div class="col">
-                            <h2 class="text-primary" id="todoi">00</h2>
+                            <h2 class="text-primary counter" id="todoi">00</h2>
                             <p>Tổ đội</p>
                         </div>
                         <div class="col">
-                            <h2 class="text-primary" id="canhan">00</h2>
+                            <h2 class="text-primary counter" id="canhan">00</h2>
                             <p>Cá nhân</p>
                         </div>
                     </div>
@@ -330,10 +330,24 @@
     </footer>
     <!-- Footer -->
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./js/taskService.js"></script>
-    <script src="js/coutdown.js"></script>
-    <script src="js/wow.min.js"></script>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+        jQuery(document).ready(function ($) {
+            $('.counter').counterUp({
+                delay: 10,
+                time: 1000
+            });
+        });
+    </script>
+    <script type="text/javascript"
+        src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
+
+    <script type="text/javascript" src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="./js/taskService.js"></script>
+    <script type="text/javascript" src="js/coutdown.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </body>
