--- a/index.html
+++ b/index.html
@@ -203,33 +203,35 @@
                 <h2 class=" text-center">TIMELINE</h2>
                 <div class="mt-5">
                     <div class="timeline">
-                        <a href="https://www.facebook.com/uit.nc/photos/a.126874967365476/4687770761275851/"
-                            class="timeline-wrapper timeline-wrapper-warning">
+                        <div class="timeline-wrapper timeline-wrapper-warning">
                             <div class="timeline-badge"></div>
                             <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h5 class="timeline-title">MINIGAME “WH47’S MY P4$$W0RD?</h5>
-                                </div>
-                                <div class="timeline-body text-center">
-                                    <img src="./img/244749838_4687770767942517_5322775904601794471_n.jpg" height="150px"
-                                        class="" alt="">
-                                </div>
+                                <a href="https://www.facebook.com/uit.nc/photos/a.126874967365476/4687770761275851/">
+                                    <div class="timeline-heading">
+                                        <h5 class="timeline-title">MINIGAME “WH47’S MY P4$$W0RD?</h5>
+                                    </div>
+                                    <div class="timeline-body text-center">
+                                        <img src="./img/244749838_4687770767942517_5322775904601794471_n.jpg"
+                                            height="150px" class="" alt="">
+                                    </div>
+                                </a>
                                 <div class="timeline-footer d-flex align-items-center flex-wrap">
                                     <i class="mdi mdi-heart-outline text-muted me-1"></i>
                                     <span class="ms-md-auto font-weight-bold">9/10/2021</span>
                                 </div>
                             </div>
-                        </a>
-                        <a class="timeline-wrapper timeline-inverted timeline-wrapper-danger"
-                            href="https://www.facebook.com/uit.nc/photos/a.126874967365476/4700685059984421">
+                        </div>
+                        <div class="timeline-wrapper timeline-inverted timeline-wrapper-danger">
                             <div class="timeline-badge">
                             </div>
                             <div class="timeline-panel">
-                                <h5 class="timeline-title">Mở link đăng kí chương trình</h5>
-                                <div class="timeline-heading text-center">
-                                    <img src="./img/243138489_4700685063317754_4836413167949705054_n.png" height="150px"
-                                        class="" alt="">
-                                </div>
+                                <a href="https://www.facebook.com/uit.nc/photos/a.126874967365476/4700685059984421">
+                                    <h5 class="timeline-title">Mở link đăng kí chương trình</h5>
+                                    <div class="timeline-heading text-center">
+                                        <img src="./img/243138489_4700685063317754_4836413167949705054_n.png"
+                                            height="150px" class="" alt="">
+                                    </div>
+                                </a>
                                 <div class="timeline-body">
                                 </div>
                                 <div class="timeline-footer d-flex align-items-center flex-wrap">
@@ -237,7 +239,7 @@
                                     <span class="ms-md-auto font-weight-bold">20 - 22/10/2021</span>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -278,7 +280,7 @@
                         <img src="./img/LogoHiTSV!.png" class="w-100" alt="logohitsv">
                     </div>
                     <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
-                        <div class="text-center">
+                        <div class="text-center ms-">
                             <iframe
                                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fuit.nc&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=894958811375739"
                                 class="text-center mx-auto w-100" height="130" style="border:none;overflow:hidden;"
