--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light shadow animate__animated animate__fadeInDown">
+    <nav class="navbar navbar-expand-lg shadow animate__animated animate__fadeInDown">
         <div class="container">
-            <button class="navbar-toggler boder mt-2 text-white border" type="button" data-mdb-toggle="collapse"
+            <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                <img src="./img/LogoHiTSV!.png" height="40" alt="" loading="lazy" />
+            </a>
+
+            <button class="navbar-toggler border mt-2 text-white" type="button" data-mdb-toggle="collapse"
                 data-mdb-target="#navbarPage" aria-controls="navbarPage" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                <img src="./img/LogoHiTSV!.png" height="40" alt="" loading="lazy" />
-            </a>
+
             <div class="collapse navbar-collapse" id="navbarPage">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -280,10 +282,10 @@
                         <img src="./img/LogoHiTSV!.png" class="w-100" alt="logohitsv">
                     </div>
                     <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
-                        <div class="text-center ms-">
+                        <div class="ms-1">
                             <iframe
                                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fuit.nc&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=894958811375739"
-                                class="text-center mx-auto w-100" height="130" style="border:none;overflow:hidden;"
+                                class="text-center mx-auto w-100" height="160" style="border:none;overflow:hidden;"
                                 scrolling="no" frameborder="0" allowfullscreen="true"
                                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                         </div>
