--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
             </div>
         </div>
     </section>
-    <section id="timeline" class="d-none d-sm-block  wow animate__fadeInUp">
-        <div class="container ">
+    <section id="timeline" class="d-none d-sm-block  ">
+        <div class="container wow animate__fadeInUp">
             <div class="row">
                 <h2 class=" text-center">TIMELINE</h2>
                 <div class="mt-5">
                     <div class="timeline">
-                        <div class="timeline-wrapper timeline-wrapper-warning">
+                        <div class="timeline-wrapper timeline-wrapper-warning ">
                             <div class="timeline-badge"></div>
                             <div class="timeline-panel">
                                 <a href="https://www.facebook.com/uit.nc/photos/a.126874967365476/4687770761275851/">
