add danhsach doi

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a class="nav-link d-none d-sm-block" href="#timeline">TIMELINE</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#footer">DANH SÁCH ĐỘI</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#footer">LIÊN HỆ</a>
                     </li>
                 </ul>
@@ -250,7 +253,7 @@
         </div>
     </section>
 
-    <section class="member mb-4  wow animate__fadeInUp">
+    <section class="member  wow animate__fadeInUp">
         <div class="container wow animate__fadeInUp">
             <h2 class="member-text text-center">
                 ĐÃ ĐĂNG KÝ</h2>
@@ -273,6 +276,18 @@
                     </div>
                 </div>
                 <div class="d-none d-md-block col-md-2"></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col d-none d-md-block"></div>
+                <div class="col col-sm-9">
+                    <iframe class="w-100" style="height: 500px;"
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                </div>
+                <div class="col d-none d-md-block"></div>
             </div>
         </div>
     </section>
