--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="row">
                 <div class="col d-none d-md-block"></div>
                 <div class="col col-sm-9">
-                    <iframe class="w-100" style="height: 500px;"
+                    <iframe class="w-100 overflow-hidden" style="height: 500px;"
                         src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                 </div>
                 <div class="col d-none d-md-block"></div>
