--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
         </div>
     </section>
     <section>
-        <div class="container">
+        <div class="containe wow animate__fadeInUp">
             <div class="row">
                 <div class="col d-none d-md-block"></div>
-                <div class="col col-sm-9">
+                <div class="col col-sm-8">
                     <iframe class="w-100 overflow-hidden" style="height: 500px;"
                         src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;headers=true"></iframe>
                 </div>
@@ -298,8 +298,8 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <img src="./img/LogoHiTSV!.png" class="w-100" alt="logohitsv">
                     </div>
-                    <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
-                        <div class="ms-1">
+                    <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4 ">
+                        <div class="ms-1 ">
                             <iframe
                                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fuit.nc&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=894958811375739"
                                 class="text-center mx-auto w-100" height="160" style="border:none;overflow:hidden;"
