--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
         </div>
     </section>
     <section>
-        <div class="containe wow animate__fadeInUp">
+        <div class="container wow animate__fadeInUp">
             <div class="row">
-                <div class="col d-none d-md-block"></div>
-                <div class="col col-sm-8">
+                <div class="col col-sm-2 d-none d-sm-block"></div>
+                <div class="col-12 col-sm-8 overflow-hidden">
                     <iframe class="w-100 overflow-hidden" style="height: 500px;"
                         src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;headers=true"></iframe>
                 </div>
