--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
             <div class="row">
                 <div class="col col-sm-2 d-none d-sm-block"></div>
                 <div class="col-12 col-sm-8 overflow-hidden">
-                    <iframe class="w-100 overflow-hidden" style="height: 500px;"
-                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;headers=true"></iframe>
+                    <iframe class="w-100" height="500px"
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRzMphi3OLd4i6dNhVkpyBzk_PDIoxN5lwkjsbSxNOzygHD1dOXnWZ_AS9VjPGXKGkeMecPBRPXgir1/pubhtml?gid=824265157&amp;single=true&amp;widget=false&amp;headers=false"></iframe>
                 </div>
                 <div class="col d-none d-md-block"></div>
             </div>
