--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
     <link rel="stylesheet" href="./css/main.css">
-
     <title>HiTSV! | Đoàn khoa Mạng máy tính và Truyền thông</title>
 </head>
 
@@ -330,17 +329,14 @@
     </footer>
 
 
-
-
-    <script type="text/javascript" src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
-
     </script>
 
-    <script type="text/javascript" src="js/coutdown.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="js/coutdown.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="js/jquery.countup.min.js"></script>
     <script>
@@ -353,8 +349,8 @@
         }
     </script>
     <!-- MDB -->
-    <script type="text/javascript" src="./js/taskService.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+    <script src="./js/taskService.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </body>
 
 </html>
